check_result5.txt
    Checking axur-frontend v0.1.0 (C:\Users\maiso\.gemini\antigravity\playground\azimuthal-opportunity\axur-web\crates\frontend)
warning: unused import: `button::*`
 --> crates\frontend\src\components\mod.rs:8:9
  |
8 | pub use button::*;
  |         ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0525]: expected a closure that implements the `Fn` trait, but this closure only implements `FnOnce`
   --> crates\frontend\src\pages\login.rs:138:5
    |
138 | /     view! {
139 | |         <div class="min-h-screen flex items-center justify-center p-4">
140 | |             <div class="w-full max-w-md">
...   |
215 | |                                 on:click=submit_2fa
    | |                                          ---------- closure is `FnOnce` because it moves the variable `submit_2fa` out of its environment
...   |
248 | |         </div>
249 | |     }
    | |     ^
    | |     |
    | |_____this closure implements `FnOnce`, not `Fn`
    |       the requirement to implement `Fn` derives from here
    |
    = note: required for `Rc<dyn std::ops::Fn() -> Fragment>` to implement `ToChildren<{closure@crates\frontend\src\pages\login.rs:138:5: 249:6}>`
    = note: this error originates in the macro `view` (in Nightly builds, run with -Z macro-backtrace for more info)

For more information about this error, try `rustc --explain E0525`.
warning: `axur-frontend` (lib) generated 1 warning
error: could not compile `axur-frontend` (lib) due to 1 previous error; 1 warning emitted
